# direct-webapp

./: .all-contributorsrc  .dockerignore  .eslintrc.js  .gitignore  .linkspector.yml  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  Dockerfile  README.md  dev-requirements.txt  doc-requirements.txt  docker-compose.yml  entrypoint.sh  manage.py  mkdocs.yml  package-lock.json  package.json  populate_db.py  prod-requirements.txt  pyproject.toml  requirements.txt  vitest.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  technical_work.yml
.github/actions/docker-build/: action.yml
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  contributors.yml  docs.yml  node-ci.yml  publish.yml
.storybook/: main.js  preview.js
data/: events.csv  levels.json  skills-competencies-framework.json  team.csv
direct_webapp/: asgi.py  context_processors.py  github_releases.py  urls.py  wsgi.py
direct_webapp/fixtures/: README.md  framework-2-0.json
direct_webapp/settings/: __init__.py  azure.py  settings.py
docs/node/: README.md
main/: admin.py  apps.py  forms.py  io_resources.py  models.py  signals.py  tables.py  urls.py  views.py
main/migrations/: 0006_skilllevel_description_skilllevel_level.py  0007_exampleuser_exampleuserskill.py  0007_userprofile.py  0007_userskill_unique_user_skill.py  0008_alter_skill_description.py  0009_alter_category_description_alter_skill_description.py  0010_alter_category_name_alter_skill_name_and_more.py  0011_alter_category_options_category_slug_skill_slug_and_more.py  0011_category_slug_skill_slug_alter_skilllevel_level.py  0012_alter_category_name_alter_skill_name_and_more.py  0012_learningresource_provider_skill_learning_resources_and_more.py  0012_learningresource_provider_userproxy_and_more.py  0013_skilllevel_focus_skilllevel_short_description.py  0013_userproxy.py  0014_populate_skilllevel_short_description.py  0015_competencydomain.py  0016_populate_competencydomains.py  0017_category_competency_domain_alter_all_slugs.py  0018_populate_category_competency_domains.py  0019_remove_competencies_with_no_domain.py  0020_rename_category_competency_alter_competency_options_and_more.py  0021_alter_tool_kind.py  0022_alter_tool_options_alter_tool_kind.py  0023_alter_learningresource_language.py  0024_create_admin_user.py  0025_alter_competency_options_alter_skill_options_and_more.py  0026_team_teammembership.py  0026_user_agreed_to_tos_user_date_agreed.py  0027_rename_tool_toollanguagemethodology.py  0028_alter_skill_tools_alter_toollanguagemethodology_kind.py  0028_alter_toollanguagemethodology_options_and_more.py  0029_alter_userproxy_options.py  0030_event.py  0030_team_teammembership.py
main/models/: __init__.py  community_models.py  framework_models.py  team_models.py  user_models.py
main/static/: manifest.json
main/static/assets/css/: theme.css  theme.css.map  theme.min.css  theme.min.css.map  vendor.bundle.css
main/static/assets/js/: dataviz.js  dataviz.js.map  dataviz.min.js  dataviz.min.js.map  main.js  main.js.map  main.min.js  main.min.js.map  theme.js  vendor.bundle.js  vendor.bundle.js.map
main/static/assets/sample_data/: sample_profile_1.json  sample_profile_41.json  sample_profile_59.json
main/static/main/js/: radial-bar-chart-config.js
main/templates/: 400.html  403.html  404.html  500.html
main/templates/app/: skill_profile.html
main/templates/django_registration/: registration_closed.html  registration_complete.html  registration_form.html
main/templates/main/: about.html  base.account.html  base.auth.html  base.html  base.page.html  base_auth.html  contact.html  demo.html  docs.html  example_skill_profile.html  framework.html  index.html  privacy.html  self-assess.html  shared-skills-profile.html  terms.html  terms_acceptance.html  training.html  user-self-assess.html  user-skills-profile.html  user-update-form.html  user_overview.html  user_self_assess.html  user_skill_profile.html  user_update_form.html
main/templates/main/pages/: about.html  competencies.html  contact.html  create-team.html  events.html  framework-overview.html  get-involved.html  learning-resources.html  my-teams.html  (+11 more)
main/templates/registration/: create_user.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
main/templates/users/: profile.html
main/utils/: generate-random-skill-data.py
main/views/: __init__.py  account_views.py  data_views.py  page_views.py
node/: README.md
node/src/js/: dataviz.js  main.js  theme.js
node/src/scss/: _dataviz.scss  _user.scss  dataviz.scss  theme.scss
node/stories/: Readme.mdx  dataviz.stories.js
node/stories/dataviz/: radial-plot.stories.js
rse_competencies_toolkit/: __init__.py
scripts/: __init__.py  populate_db.py
tests/: conftest.py
tests/data/: example_role.json  framework.json
tests/main/: conftest.py  test_admin_views.py  test_community_models.py  test_data_views.py  test_forms.py  test_framework_models.py  test_github_releases.py  test_io_resources.py  test_main_domain.py  test_main_views.py  test_models.py  test_registration_views.py  test_tables.py  test_user_models.py  view_utils.py
tests/main/views/: test_skill_profile_view.py
tests/scripts/: test_populate_db.py
(+28 files in other folders)
